- Added string / regex replacement response writer (https://github.com/dukeofharen/httplaceholder/pull/309).
- Added SignalR connection for stubs (https://github.com/dukeofharen/httplaceholder/pull/310).

[2023.4.25]
- Upgraded to .NET 7 (https://github.com/dukeofharen/httplaceholder/pull/293).
- Added "show more" button to request body for when the request body is very long (https://github.com/dukeofharen/httplaceholder/pull/294).
- Added text file response writer (https://github.com/dukeofharen/httplaceholder/pull/295).
- Updated request body variable parser to also support regular expressions to insert part of request body in the response body (https://github.com/dukeofharen/httplaceholder/pull/296).
- An option was added to user the display URL variable parser with a regular expression, to parse only a part of the URL as part of your response (https://github.com/dukeofharen/httplaceholder/pull/297).
- Updated the HTTP method condition checker so it is now possible to provide multiple HTTP methods if needed (https://github.com/dukeofharen/httplaceholder/issues/298).
- Pressing "Cmd + S" now saves the stub form, instead of calling the browser save functionality (https://github.com/dukeofharen/httplaceholder/pull/300).
- It is now possible, when importing a stub through the UI or the API, to also provide a stub ID prefix. All stubs imported in this batch will have this ID prefixed with the string you've provided (https://github.com/dukeofharen/httplaceholder/pull/302).

# BREAKING CHANGES
- If you use any of the pre-built binaries of HttPlaceholder, you won't notice anything with upgrading. If you use the .NET tool version of HttPlaceholder, you need to have [.NET 7](https://dotnet.microsoft.com/en-us/) installed from now on.