@@ -108,4 +108,59 @@ public class RequestStubGeneratorFacts
         stubContextMock.Verify(m => m.DeleteStubAsync(It.IsAny<string>(), It.IsAny<CancellationToken>()), Times.Never);
         stubContextMock.Verify(m => m.AddStubAsync(It.IsAny<StubModel>(), It.IsAny<CancellationToken>()), Times.Never);
     }
+
+    [TestMethod]
+    public async Task GenerateStubBasedOnRequestAsync_RequestFound_ResponseFound()
+    {
+        // Arrange
+        var stubContextMock = _mocker.GetMock<IStubContext>();
+        var mapperMock = _mocker.GetMock<IMapper>();
+        var httpRequestToConditionsServiceMock = _mocker.GetMock<IHttpRequestToConditionsService>();
+        var httpResponseToStubResponseServiceMock = _mocker.GetMock<IHttpResponseToStubResponseService>();
+        var generator = _mocker.CreateInstance<RequestStubGenerator>();
+
+        const string expectedStubId = "generated-8358757ce7fac539123f33db05bb11b5";
+
+        var request =
+            new RequestResultModel {CorrelationId = "2", RequestParameters = new RequestParametersModel()};
+
+        stubContextMock
+            .Setup(m => m.GetRequestResultAsync("2", It.IsAny<CancellationToken>()))
+            .ReturnsAsync(request);
+
+        var mappedRequest = new HttpRequestModel();
+        mapperMock
+            .Setup(m => m.Map<HttpRequestModel>(request.RequestParameters))
+            .Returns(mappedRequest);
+
+        var conditions = new StubConditionsModel();
+        httpRequestToConditionsServiceMock
+            .Setup(m => m.ConvertToConditionsAsync(mappedRequest, It.IsAny<CancellationToken>()))
+            .ReturnsAsync(conditions);
+
+        var response = new ResponseModel();
+        stubContextMock
+            .Setup(m => m.GetResponseAsync("2", It.IsAny<CancellationToken>()))
+            .ReturnsAsync(response);
+        var mappedResponse = new HttpResponseModel();
+        mapperMock
+            .Setup(m => m.Map<HttpResponseModel>(response))
+            .Returns(mappedResponse);
+        var stubResponse = new StubResponseModel();
+        httpResponseToStubResponseServiceMock
+            .Setup(m => m.ConvertToResponseAsync(mappedResponse, It.IsAny<CancellationToken>()))
+            .ReturnsAsync(stubResponse);
+
+        // Act
+        var result = await generator.GenerateStubBasedOnRequestAsync("2", true, CancellationToken.None);
+
+        // Assert
+        Assert.IsNotNull(result.Metadata);
+        Assert.AreEqual(stubResponse, result.Stub.Response);
+        Assert.AreEqual(expectedStubId, result.Stub.Id);
+        Assert.AreEqual(conditions, result.Stub.Conditions);
+
+        stubContextMock.Verify(m => m.DeleteStubAsync(It.IsAny<string>(), It.IsAny<CancellationToken>()), Times.Never);
+        stubContextMock.Verify(m => m.AddStubAsync(It.IsAny<StubModel>(), It.IsAny<CancellationToken>()), Times.Never);
+    }
 }
