@@ -12,6 +12,7 @@
 - Fixed requests bug: whenever the request parameters were not saved (may happen in some rare cases when HttPlaceholder is DDOS'ed), the API returned an HTTP 500 (https://github.com/dukeofharen/httplaceholder/pull/308).
 - Added string / regex replacement response writer (https://github.com/dukeofharen/httplaceholder/pull/309).
 - Added SignalR connection for stubs (https://github.com/dukeofharen/httplaceholder/pull/310).
+- When generating a stub based on a request, also take the saved saved response (if there is one) into account (https://github.com/dukeofharen/httplaceholder/pull/311).
 
 [2023.4.25]
 - Upgraded to .NET 7 (https://github.com/dukeofharen/httplaceholder/pull/293).
